First version of functionnal install

--- a/config/n8n.docker.env
+++ b/config/n8n.docker.env
@@ -1,33 +1,20 @@
 # ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- 
 # TODO: explain how following value have to be configured / overriden.
 
-# hostname = n8n.local
-DOMAIN_NAME=local
-SUBDOMAIN=n8n
-# The user name & password to use for authentication - IMPORTANT ALWAYS CHANGE!
-N8N_BASIC_AUTH_USER=user
-N8N_BASIC_AUTH_PASSWORD=password
-
-# Optional timezone to set which gets used by Cron-Node by default
-# If not set New York time will be used
-GENERIC_TIMEZONE=Europe/Paris
-
-# The email address to use for the SSL certificate creation
-SSL_EMAIL=user@example.com# The top level domain to serve from
-
 # ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- 
 # Technical n8n configuration.
 # Folder where data should be saved on container.
 # note : must match docker compose mounted volume.
 DATA_FOLDER=/root/n8n/
 N8N_BASIC_AUTH_ACTIVE=true
-N8N_BASIC_AUTH_USER=true
-N8N_BASIC_AUTH_PASSWORD=true
+N8N_BASIC_AUTH_USER=user
+N8N_BASIC_AUTH_PASSWORD=password
 # N8N_HOST=n8n.local
 N8N_HOST=n8n.local
 N8N_PORT=5678
-N8N_PROTOCOL=https
+# N8N_PROTOCOL=https
+N8N_PROTOCOL=http
 NODE_ENV=production
 # WEBHOOK_URL=https://${SUBDOMAIN}.${DOMAIN_NAME}/
-WEBHOOK_URL=https://n8n.local/
+WEBHOOK_URL=http://n8n.local/
 # GENERIC_TIMEZONE=${GENERIC_TIMEZONE}
