--- a/config/n8n.docker.env
+++ b/config/n8n.docker.env
@@ -10,11 +10,9 @@ N8N_BASIC_AUTH_ACTIVE=true
 N8N_BASIC_AUTH_USER=user
 N8N_BASIC_AUTH_PASSWORD=password
 # N8N_HOST=n8n.local
-N8N_HOST=n8n.local
 N8N_PORT=5678
 # N8N_PROTOCOL=https
 N8N_PROTOCOL=http
 NODE_ENV=production
-# WEBHOOK_URL=https://${SUBDOMAIN}.${DOMAIN_NAME}/
-WEBHOOK_URL=http://n8n.local/
+WEBHOOK_URL=https://${SUBDOMAIN}.${DOMAIN_NAME}/
 # GENERIC_TIMEZONE=${GENERIC_TIMEZONE}
