--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .env
-config/.n8n.docker.secret.env
+docker-compose.override.yml
 
+config/.n8n.docker.secret.env
 data/n8n/*
 !data/n8n/.gitkeep
-docker-compose.override.yml
+
+config/traefik/certificates
+config/traefik/certificates/.gitkeep
