--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,18 +9,18 @@ services:
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
+      # To configure certificates.
+      - "--providers.file.directory=/configuration/"
+      - "--providers.file.watch=true"
       - "--entrypoints.web.address=:80"
-      # - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
-      # - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
-      # - "--entrypoints.websecure.address=:443"
-      # - "--certificatesresolvers.mytlschallenge.acme.tlschallenge=true"
-      # - "--certificatesresolvers.mytlschallenge.acme.email=${SSL_EMAIL}"
-      # - "--certificatesresolvers.mytlschallenge.acme.storage=/letsencrypt/acme.json"
+      - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
+      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
+      - "--entrypoints.websecure.address=:443"
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./data/letsencrypt:/letsencrypt
+      - ./config/traefik/:/configuration
       - /var/run/docker.sock:/var/run/docker.sock:ro
 
   n8n:
@@ -31,21 +31,21 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.n8n.rule=Host(`${SUBDOMAIN}.${DOMAIN_NAME}`)
-      # - traefik.http.routers.n8n.tls=true
-      - traefik.http.routers.n8n.tls=false
-      # - traefik.http.routers.n8n.entrypoints=web,websecure
-      - traefik.http.routers.n8n.entrypoints=web
+      - traefik.http.routers.n8n.tls=true
+      # - traefik.http.routers.n8n.tls=false
+      - traefik.http.routers.n8n.entrypoints=web,websecure
+      # - traefik.http.routers.n8n.entrypoints=web
       # - traefik.http.routers.n8n.tls.certresolver=mytlschallenge
       # - traefik.http.middlewares.n8n.headers.SSLRedirect=true
-      - traefik.http.middlewares.n8n.headers.STSSeconds=315360000
-      - traefik.http.middlewares.n8n.headers.browserXSSFilter=true
-      - traefik.http.middlewares.n8n.headers.contentTypeNosniff=true
-      - traefik.http.middlewares.n8n.headers.forceSTSHeader=true
+      # - traefik.http.middlewares.n8n.headers.STSSeconds=315360000
+      # - traefik.http.middlewares.n8n.headers.browserXSSFilter=true
+      # - traefik.http.middlewares.n8n.headers.contentTypeNosniff=true
+      # - traefik.http.middlewares.n8n.headers.forceSTSHeader=true
       # - traefik.http.middlewares.n8n.headers.SSLHost=${DOMAIN_NAME}
       # - traefik.http.middlewares.n8n.headers.Host=${DOMAIN_NAME}
-      - traefik.http.middlewares.n8n.headers.STSIncludeSubdomains=true
-      - traefik.http.middlewares.n8n.headers.STSPreload=true
-      - traefik.http.routers.n8n.middlewares=n8n@docker
+      # - traefik.http.middlewares.n8n.headers.STSIncludeSubdomains=true
+      # - traefik.http.middlewares.n8n.headers.STSPreload=true
+      # - traefik.http.routers.n8n.middlewares=n8n@docker
     env_file:
       - config/n8n.docker.env
       - config/.n8n.docker.secret.env
@@ -66,7 +66,7 @@ services:
       # - 15672:15672
     volumes:
       - ./data/rabbitmq_data:/var/lib/rabbitmq/
-      - ./rabbitmq_log:/var/log/rabbitmq
+      - ./log/rabbitmq:/var/log/rabbitmq
     labels:
       - traefik.enable=true
       - traefik.http.routers.rabbitmq.rule=Host(`rabbitmq.${DOMAIN_NAME}`)
