--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,20 +32,16 @@ services:
       - traefik.enable=true
       - traefik.http.routers.n8n.rule=Host(`${SUBDOMAIN}.${DOMAIN_NAME}`)
       - traefik.http.routers.n8n.tls=true
-      # - traefik.http.routers.n8n.tls=false
       - traefik.http.routers.n8n.entrypoints=web,websecure
-      # - traefik.http.routers.n8n.entrypoints=web
-      # - traefik.http.routers.n8n.tls.certresolver=mytlschallenge
-      # - traefik.http.middlewares.n8n.headers.SSLRedirect=true
-      # - traefik.http.middlewares.n8n.headers.STSSeconds=315360000
-      # - traefik.http.middlewares.n8n.headers.browserXSSFilter=true
-      # - traefik.http.middlewares.n8n.headers.contentTypeNosniff=true
-      # - traefik.http.middlewares.n8n.headers.forceSTSHeader=true
-      # - traefik.http.middlewares.n8n.headers.SSLHost=${DOMAIN_NAME}
-      # - traefik.http.middlewares.n8n.headers.Host=${DOMAIN_NAME}
-      # - traefik.http.middlewares.n8n.headers.STSIncludeSubdomains=true
-      # - traefik.http.middlewares.n8n.headers.STSPreload=true
-      # - traefik.http.routers.n8n.middlewares=n8n@docker
+      - traefik.http.middlewares.n8n.headers.SSLRedirect=true
+      - traefik.http.middlewares.n8n.headers.STSSeconds=315360000
+      - traefik.http.middlewares.n8n.headers.browserXSSFilter=true
+      - traefik.http.middlewares.n8n.headers.contentTypeNosniff=true
+      - traefik.http.middlewares.n8n.headers.forceSTSHeader=true
+      - traefik.http.middlewares.n8n.headers.SSLHost=${DOMAIN_NAME}
+      - traefik.http.middlewares.n8n.headers.STSIncludeSubdomains=true
+      - traefik.http.middlewares.n8n.headers.STSPreload=true
+      - traefik.http.routers.n8n.middlewares=n8n@docker
     env_file:
       - config/n8n.docker.env
       - config/.n8n.docker.secret.env
