--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,9 +16,20 @@ services:
       # - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
       # - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
       - "--entrypoints.websecure.address=:443"
+      # Dashboard
+      - "--api.dashboard=true"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.api.entryPoints=traefik"
+      - "traefik.http.routers.api.rule=PathPrefix(`/api`) || PathPrefix(`/dashboard`)"
+      - "traefik.http.routers.api.service=api@internal"
+      - "traefik.http.routers.api.middlewares=api-auth"
+      - "traefik.http.middlewares.api-auth.basicauth.users=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/" # test:test
+
     ports:
       - "80:80"
       - "443:443"
+      - "8080:8080"
     volumes:
       - ./config/traefik/:/configuration
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -45,7 +56,7 @@ services:
     env_file:
       - config/n8n.docker.env
       - config/.n8n.docker.secret.env
-    volumes:  
+    volumes:
       - ./data/n8n:/home/node/.n8n
       - ./data/n8n_local_files:/files
 
@@ -59,7 +70,7 @@ services:
       # rabbitmq port
       - 5672:5672
       # Management console port (remove once routed by traefik)
-      # - 15672:15672
+      - 15672:15672
     volumes:
       - ./data/rabbitmq_data:/var/lib/rabbitmq/
       - ./log/rabbitmq:/var/logs/rabbitmq
